cmake_minimum_required(VERSION 3.26)
project(Hello LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)

add_executable(1 src/1.cpp)
add_executable(2 src/2.cpp)
add_executable(3 src/3.cpp)
add_executable(4 src/4.cpp)
add_executable(5 src/5.cpp)
add_executable(6 src/6.cpp)
add_executable(7 src/7.cpp)
add_executable(8 src/8.cpp)
add_executable(9 src/9.cpp)
